--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Index</title>
 </head>
 <body>
 
-<a href="rest/hello">Click Here</a>
+<a href="webapi/hello">Click Here</a>
 </body>
 </html>
